--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-   <script src="../src/script.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
